# mini-cai-dpo

./: .env.example  .gitignore  README.md  migrate_to_venv.ps1  pyproject.toml  requirements.txt
data/raw/: red_team_prompts_100.jsonl
src/mini_cai/: constants.py  critique_loop.py  preference_gen.py  subsample_redteam.py  train_sl_cai.py  untune.py
src/mini_cai/prompts/: harmful_templates.py
src/mini_cai/scripts/: extract_red_prompts.py  generate_harmful_pairs.py
