[project]
name = "mini-cai-dpo"
version = "0.1.0"
description = "A mini Constitutional AI project with SL and DPO fine-tuning."
authors = [
    {name = "Henrik Halasz",email = "hkh34@cam.ac.uk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "datasets>=4.0.0,<5.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "mini_cai", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"

