[project]
name = "mini-cai-dpo"
version = "0.1.0"
description = "A mini Constitutional AI project with SL and DPO fine-tuning."
authors = [
    {name = "Henrik Halasz",email = "hkh34@cam.ac.uk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.0",
    "openai>=1.0.0",
    "trl>=0.7.0"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

